infra/production/azure/k8s/api-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - name: api-gateway
          image: goridecr.azurecr.io/goride/api-gateway
          ports:
            - containerPort: 8081
          resources:
            requests:
              memory: "128Mi"
              cpu: "125m"
            limits:
              memory: "128Mi"
              cpu: "125m"
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
spec:
  type: LoadBalancer
  ports:
    - port: 8081
      targetPort: 8081
  selector:
    app: api-gateway
